package com.example.observer;

public interface IObserver {
    void update(Subject subject);
}